# upskill

./: README.md
examples/sidekick_chatbot/: AGENTS.md  README.md  _run.py  chat.py  chat.ts  config.yaml  run.py  run.ts
examples/sidekick_chatbot/.my_tool_sandbox/: script.py
examples/sidekick_chatbot/skills/math-calculator/: SKILL.md
examples/sidekick_chatbot/skills/news-qa/: SKILL.md
examples/sidekick_chatbot/skills/sports-qa/: SKILL.md
examples/sidekick_chatbot/skills/weather-qa/: SKILL.md
examples/sidekick_chatbot/tools/local/python/: datetime_utils.py
examples/sidekick_chatbot/tools/local/typescript/: datetime_utils.ts  package-lock.json  package.json  tsconfig.json
examples/sidekick_chatbot/tools/mcp/: code_interpreter.yaml  news.yaml  sports.yaml  weather.yaml
upskill-js/: README.md  package-lock.json  package.json  test-run.ts
upskill-js/src/: agent.ts  index.ts  loader.ts  loop.ts  skills.ts  tools.ts  types.ts
upskill-py/: pyproject.toml
upskill-py/requirements/: requirements.txt
upskill-py/src/upskill/: __init__.py  agent.py  environment_variables.py  loader.py  loop.py  skills.py  tools.py
